fixed z-index, and duplicated style file

--- a/src/styles/blocks/stopwatch.scss
+++ b/src/styles/blocks/stopwatch.scss
@@ -29,7 +29,7 @@
 
     &--minute {
       width: 5px;
-      z-index: 90;
+      z-index: 1;
 
       background-color: $minutes-hand-color;
 
@@ -40,7 +40,6 @@
 
     &--second {
       width: 2px;
-      z-index: 80;
 
       background-color: $secondary-color;
 
@@ -55,7 +54,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 10000;
+    z-index: 2;
 
     height: 10px;
     width: 10px;
